feat: architecture test pass and ddd package design
